# polymarket

./: .gitignore  README.md  polymarket_email_account_mode_design_2026-05-17.md  polymarket_email_deposit_wallet_success_2026-05-18.md  polymarket_kronos_system_design.md  polymarket_martingale_handoff_2026-05-15.md  polymarket_martingale_phase_summary_2026-05-13.md  polymarket_martingale_system_dev_doc.md  polymarket_server_recovery_guide.md  v1_binance_kronos_backtest_plan.md
kronos_v1_backtest/: README.md  pyproject.toml
kronos_v1_backtest/tests/: test_martingale_unittest.py  test_sample_builder.py
martingale_research/: README.md  pyproject.toml
martingale_research/config/: polymarket_adapter.example.json  polymarket_public_client.example.json  polymarket_trading_session.example.json
martingale_research/scripts/: candidate_scan.py  check_onchain_balance.py  export_strategy_bundle.py  full_strategy_scan.py  inspect_account_value.py  preview_decision.py  preview_polymarket_adapter.py  preview_polymarket_client.py  preview_polymarket_session.py  preview_trading_client.py  probe_signature_types.py  refresh_binance_dataset.py  run_allowance_refresh.py  run_daemon_preview.py  run_hourly_preview.py  run_min_order_probe.py  run_real_sdk_bridge.py  test_okx_wallet_eoa.py  test_okx_wallet_eoa_order.py
martingale_research/strategy_outputs/: auto-scan-summary.json
martingale_research/tests/: test_allowance_refresh.py  test_daemon.py  test_decision_engine.py  test_martingale_unittest.py  test_min_order_probe.py  test_polymarket_adapter.py  test_polymarket_client.py  (+5 more)
(+362 files in other folders)
