[project]
name = "kronos-v1-backtest"
version = "0.1.0"
description = "V1 Binance-only Kronos path-filtering backtest - BTC only"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kronos-v1 = "kronos_v1_backtest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
