[project]
name = "martingale-research-backtest"
version = "0.1.0"
description = "Binance 1H martingale research and risk filtering backtest"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
martingale-research = "martingale_research.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
